# soarm101_ws

src/lerobot_controller/config/: so101_controllers.yaml
src/lerobot_description/rviz/: display.rviz
src/lerobot_description/urdf/: so101_base.xacro  so101_ros2_control.xacro
src/lerobot_launch/: CMakeLists.txt  package.xml
src/lerobot_launch/launch/: so101_single_moveit_gazebo.launch.py
src/lerobot_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  so101.srdf
src/lerobot_moveit/launch/: so101_moveit.launch.py
src/lerobot_moveit/rviz/: moveit.rviz
