<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_launch</name>
  <version>0.0.1</version>
  <description>Launch files for SO101 robot with Gazebo, controllers, and MoveIt</description>
  <maintainer email="stephen@todo.todo">stephen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lerobot_description</exec_depend>
  <exec_depend>lerobot_controller</exec_depend>
  <exec_depend>lerobot_moveit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
